tests/errors/frontend/type/arity.fpcore
(FPCore (x y)
 (sqrt x y))
